# jrg-gitit-plugins

./: README.md  default.nix  jrg-gitit-plugins.cabal  shell.nix
Tests/: Ditaa.page  Dot.page  HsDiagrams.page  Images.page  IncludeAsCodeBlock.page  IncludeDoc.page  Listing.page  Maths.page  MediaWikiInput.page  PlantUML.page  SubPage.page  SyntaxHighlighting.page
Tests/PlantUML/: simple.plantuml
Tests/SubDir/: ASubPage.page
src/Network/Gitit/: PluginsJRG.hs
src/Network/Gitit/Plugins/: Ditaa.hs  Dot.hs  GnuPlot.hs  HsDiagrams.hs  ImgTex.hs  IncludeAsCodeBlock.hs  IncludeDoc.hs  PlantUML.hs  ShowUser.hs  Signature.hs
